@@ -1,3 +1,6 @@
+2007-06-19  David Bruehlmeier <typo3@bruehlmeier.com> 
+	* Updated static_markets
+
 2007-06-16  Franz Holzinger  <kontakt@fholzinger.com>
 	* support for custom where clauses with static_info_tables by Jeff Segars
 	* fix bug #5616: hook function processDatamap_postProcessFieldArray must not use $this as parameter name
